# Major_project

./: .gitignore  README.md  get-pip.py  mysql-init.txt  pyproject.toml  ruff.toml
apps/: distilBERTKeyword.py  keywordExtraction.py  llama_distractors.py  questionGeneration.py  question_gen_science.py  rakeKeyword.py  s2vdistractors.py  summarization.py  t5distractors.py
apps/modules/: duplicate_removal.py  keyword_chunking.py  text_clean.py
mysite/: settings.py  urls.py
quesGens/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
quesGens/static/css/: style.css  styles.css
quesGens/static/js/: index.js  main.js
quesGens/templates/quesGens/: about.html  base.html  error.html  history.html  index.html  landing.html  profile.html  result.html  test.html  test_results.html
