[project]
name = "question-answering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "crispy-bootstrap5>=2024.10",
    "django-crispy-forms>=2.3",
    "django>=4.2.16",
    "flashtext==2.7",
    "huggingface-hub>=0.26.1",
    "langchain-ollama>=0.2.0",
    "peft>=0.13.2",
    "pip>=24.3.1",
    "pke",
    "protobuf>=5.28.3",
    "rake-nltk>=1.0.6",
    "reportlab>=4.2.5",
    "safetensors>=0.4.5",
    "scipy==1.8.0",
    "sense2vec==2.0.1",
    "sentence-transformers>=2.2.2",
    "sentencepiece==0.1.95",
    "strsim==0.0.3",
    "textwrap3==0.9.2",
    "transformers==4.44.2",
    "pypdf2>=3.0.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
]

[tool.uv.sources]
pke = { git = "https://github.com/boudinfl/pke.git" }
